[project]
name = "3dmarkscorescraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "questionary>=2.1.0",
    "requests>=2.32.3",
    "tenacity>=9.1.2",
    "tqdm>=4.67.1",
]
